src/tailwind.output.css
/* ... */
.mt-0\.5 {
  margin-top: 0.125rem;
}

.mt-0 {
  margin-top: 0px;
}

.ml-\[5\%\] {
  margin-left: 5%;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mt-5 {
  margin-top: 1.25rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.inline-flex {
  display: inline-flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-12 {
  height: 3rem;
}

.h-8 {
  height: 2rem;
}

.h-11 {
  height: 2.75rem;
}

.h-7 {
  height: 1.75rem;
}

.h-screen {
  height: 100vh;
}

.h-1\/3 {
  height: 33.333333%;
}

.h-full {
  height: 100%;
}

.h-20 {
  height: 5rem;
}

.h-3 {
  height: 0.75rem;
}

.h-56 {
  height: 14rem;
}

.h-28 {
  height: 7rem;
}

.h-4 {
  height: 1rem;
}

.h-60 {
  height: 15rem;
}

.h-2\/3 {
  height: 66.666667%;
}

.h-\[112\%\] {
  height: 112%;
}

.w-12 {
  width: 3rem;
}

.w-full {
  width: 100%;
}

.w-9 {
  width: 2.25rem;
}

.w-10 {
  width: 2.5rem;
}

.w-20 {
  width: 5rem;
}

.w-8 {
  width: 2rem;
}

.w-fit {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.w-56 {
  width: 14rem;
}

.w-\[90\%\] {
  width: 90%;
}

.w-1\/2 {
  width: 50%;
}

.w-1\/6 {
  width: 16.666667%;
}

.w-1\/3 {
  width: 33.333333%;
}

.w-2\/3 {
  width: 66.666667%;
}

.w-5\/6 {
  width: 83.333333%;
}

.w-48 {
  width: 12rem;
}

.w-2 {
  width: 0.5rem;
}

.w-\[762px\] {
  width: 762px;
}

.min-w-\[200px\] {
  min-width: 200px;
}

.min-w-\[9rem\] {
  min-width: 9rem;
}

.origin-top-right {
  -webkit-transform-origin: top right;
          transform-origin: top right;
}

.scale-95 {
  --tw-scale-x: .95;
  --tw-scale-y: .95;
  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.scale-100 {
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform {
  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.grid-flow-col {
  grid-auto-flow: column;
}

.grid-cols-1 {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}

.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
}

.grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.grid-rows-2 {
  grid-template-rows: repeat(2, minmax(0, 1fr));
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.place-content-center {
  place-content: center;
}

.items-center {
  align-items: center;
}

.justify-start {
  justify-content: flex-start;
}

.justify-end {
  justify-content: flex-end;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.justify-around {
  justify-content: space-around;
}

.justify-evenly {
  justify-content: space-evenly;
}

.gap-4 {
  gap: 1rem;
}

.gap-16 {
  gap: 4rem;
}

.gap-8 {
  gap: 2rem;
}

.gap-10 {
  gap: 2.5rem;
}

.break-words {
  overflow-wrap: break-word;
}

.rounded-md {
  border-radius: 0.375rem;
}

.rounded-full {
  border-radius: 9999px;
}

.rounded-r-md {
  border-top-right-radius: 0.375rem;
  border-bottom-right-radius: 0.375rem;
}

.rounded-r-lg {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.border-2 {
  border-width: 2px;
}

.border-\[1px\] {
  border-width: 1px;
}

.border-x-2 {
  border-left-width: 2px;
  border-right-width: 2px;
}

.border-r-2 {
  border-right-width: 2px;
}

.border-b-\[1px\] {
  border-bottom-width: 1px;
}

.border-l-2 {
  border-left-width: 2px;
}

.border-r-\[1px\] {
  border-right-width: 1px;
}

.border-t-\[1px\] {
  border-top-width: 1px;
}

.border-t-2 {
  border-top-width: 2px;
}

.border-t-\[\.5px\] {
  border-top-width: .5px;
}

.border-l-\[1px\] {
  border-left-width: 1px;
}

.border-t-\[0px\] {
  border-top-width: 0px;
}

.border-b-2 {
  border-bottom-width: 2px;
}

.border-l-\[0px\] {
  border-left-width: 0px;
}

.border-dashed {
  border-style: dashed;
}

.border-double {
  border-style: double;
}

.border-orange {
  --tw-border-opacity: 1;
  border-color: rgb(253 112 94 / var(--tw-border-opacity));
}

.border-gray {
  --tw-border-opacity: 1;
  border-color: rgb(229 229 229 / var(--tw-border-opacity));
}

.border-purple {
  --tw-border-opacity: 1;
  border-color: rgb(135 78 210 / var(--tw-border-opacity));
}

.bg-gray {
  --tw-bg-opacity: 1;
  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
}

.bg-red-600 {
  --tw-bg-opacity: 1;
  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
}

.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.bg-purple {
  --tw-bg-opacity: 1;
  background-color: rgb(135 78 210 / var(--tw-bg-opacity));
}

.bg-opacity-30 {
  --tw-bg-opacity: 0.3;
}

.bg-cover {
  background-size: cover;
}

.bg-center {
  background-position: center;
}

.p-2 {
  padding: 0.5rem;
}

.p-7 {
  padding: 1.75rem;
}

.p-4 {
  padding: 1rem;
}

.p-3 {
  padding: 0.75rem;
}

.p-1 {
  padding: 0.25rem;
}

.px-3 {
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}
/* ... */

